kubernetes-files/manifests/jenkins.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.giraf.cs.aau.dk
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-vol
          mountPath: /var/jenkins_home
          subPath: jenkins
      volumes:
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: jenkins-pvc
